libs/preprocessor/tests/errors/pe27_unexpected_endif/stderr.ansi
[0m[1m[38;5;9merror[PE27][0m[1m: #endif when not in a #if directive[0m
  [0m[36m┌─[0m source.hpp:3:2
  [0m[36m│[0m
[0m[36m3[0m [0m[36m│[0m #[0m[31mendif[0m
  [0m[36m│[0m  [0m[31m^^^^^[0m [0m[31m#endif when not in a #if directive[0m

